--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -43,7 +43,7 @@
     row-gap: 10px;
     align-items: start;
     justify-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     @media (max-width: 1650px) {
       grid-template-columns: repeat(6, 1fr);
